# rps

./: .gitignore  docker-compose.yml
client/: index.html  package-lock.json  package.json  tsconfig.app.json
client/public/: popup-callback.html
client/src/: App.tsx  index.css  main.tsx  protected-routes.tsx  routes.ts  routes.tsx
client/src/api/: auth.ts
server/: .ash_history  .python_history  Dockerfile  db.sqlite3  docker-compose.yml  initialdata.json  manage.py  pyproject.toml
server/apps/authentication/: admin.py  authentication.py  github.py  google.py  models.py  serializers.py  urls.py  viewsets.py
server/apps/authentication/migrations/: 0001_initial.py
server/apps/client/: factory.py  models.py  serializers.py  urls.py  viewsets.py
server/apps/client/management/commands/: populate_clients.py
server/apps/client/migrations/: 0001_initial.py  0002_client_email.py
server/apps/finance/: factory.py  models.py  serializers.py  urls.py  viewsets.py
server/apps/finance/management/commands/: populate_bills.py
server/apps/finance/migrations/: 0001_initial.py
server/apps/notifications/: enums.py  models.py  serializers.py  urls.py  utils.py  viewsets.py
server/apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_id.py
server/apps/service/: factory.py  models.py  serializers.py  urls.py  viewsets.py
server/apps/service/management/commands/: populate_clients.py
server/apps/service/migrations/: 0001_initial.py
server/rps_server/: asgi.py  decorators.py  models.py  pagination.py  settings.py  urls.py  utils.py  wsgi.py
(+59 files in other folders)
